--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "eslint.enable": false
+  "eslint.enable": false,
+  "javascript.validate.enable": false,
+  "flow.useNPMPackagedFlow": true
 }
